--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
         html {
             background-color: #999;
             color: #fff;
-            padding: 10px;
+            padding: 8px;
         }
 
         button,
@@ -29,6 +29,7 @@
             padding: 14px;
             color: #fff;
             font-family: sans-serif;
+            font-size: 12px;
             display: None;
             width: 90px;
         }
