--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
         html {
             background-color: #999;
             color: #fff;
-            padding: 6px;
+            padding: 30px 6px;
         }
 
         button,
